things and stuff

--- a/bonus1/bonus_one.html
+++ b/bonus1/bonus_one.html
@@ -12,7 +12,7 @@
 	<div class="flexsearch">
 		<div class="flexsearch-wrapper">
 			<!-- You'll handle the form with js, so no need for method and action -->
-			<form class="flexsearch-form" id="mainForm">
+			<form class="flexsearch-form" id="mainForm" onsubmit="mysearch()" >
 				<div class="flexsearch-input-wrapper">
 					<input class="flexsearch-input" type="search" placeholder="search" onkeyup="magic()" id="search">
 				</div>
